# opencv_QRcode

./: .gitignore  CMakeLists.txt  main.cpp
